crates/toml_edit/tests/snapshots/invalid/control/multi-us.stderr
TOML parse error at line 1, column 21
  |
1 | multi-us   = """null"""
  |                     ^
invalid multi-line basic string, expected `\`, characters
